--- a/pom.xml
+++ b/pom.xml
@@ -3,36 +3,36 @@
     <modelVersion>4.0.0</modelVersion>
 
     <packaging>jar</packaging>
-    <groupId>com.github.spyhunter99</groupId>
+    <groupId>com.coolbalance</groupId>
     <artifactId>install-cert</artifactId>
-    <version>1.0.6-SNAPSHOT</version>
+    <version>1.1.0-SNAPSHOT</version>
     <name>Install Cert</name>
     <description>A utility to add certs to the trust store from a connection attempt, originially written by Oracle</description>
-    <url>https://github.com/spyhunter99</url>
+    <url>https://github.com/coolbalance</url>
     <prerequisites>
         <maven>3.2.1</maven>
     </prerequisites>
 
     <properties>
         <javadoc.extra.settings />
-        <maven.compiler.source>1.6</maven.compiler.source>
-        <maven.compiler.target>1.6</maven.compiler.target>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
         <sourceReleaseAssemblyDescriptor>source-release</sourceReleaseAssemblyDescriptor>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
     <organization>
         <name>Github</name>
-        <url>http://www.github.com/spyhunter99</url>
+        <url>http://www.github.com/coolbalance</url>
     </organization>
     <issueManagement>
         <system>Github</system>
-        <url>https://github.com/spyhunter99/installcert/issues</url>
+        <url>https://github.com/coolbalance/installcert/issues</url>
     </issueManagement>
 
     <ciManagement>
         <system>TravisCI</system>
-        <url>https://travis-ci.org/spyhunter99/installcert</url>
+        <url>https://travis-ci.org/coolbalance/installcert</url>
     </ciManagement>
     <distributionManagement>
         <repository>
@@ -49,7 +49,7 @@
         </snapshotRepository>
         <site>
             <id>website</id>
-            <url>https://www.github/spyhunter99/installcert</url>
+            <url>https://www.github/coolbalance/installcert</url>
         </site>
     </distributionManagement>
     <inceptionYear>2008</inceptionYear>
@@ -89,7 +89,12 @@
             <email>alexoree at apache.org</email>
         </developer>
 		
-		
+		<developer>
+            <id>gb</id>
+            <name>Gregory Bruce</name>
+            <email>gabruce@coolbalance.com</email>
+            <url>https://www.coolbalance.com</url>
+        </developer>
 		
     </developers>
     <contributors>
@@ -126,7 +131,18 @@
             <artifactId>postgresql</artifactId>
             <version>9.4.1212</version>
         </dependency>
-
+        <dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+            <version>2.4.0-b180830.0359</version>
+            <type>jar</type>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.7.30</version>
+            <type>jar</type>
+        </dependency>
     </dependencies>
     <build>
         <pluginManagement>
